# ReplayIDS

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: reproducibility.yml
analysis/: build_paper_results.py  export_run_summaries.py  plot_paper_results.py  result_io.py  verify_eaai_mapping.py
benchmarks/cross_architecture/: README.md  pyproject.toml
benchmarks/cross_architecture/results/: metrics.json  summary_ci.csv  summary_cii.csv
benchmarks/cross_architecture/results/icarl/: metrics.json  summary_ci.csv  summary_cii.csv
benchmarks/cross_architecture/src/: data_prep.py  evaluate.py  models.py  run.py  strategies.py
configs/: config.yaml
configs/data/: cicids2017.yaml  features.yaml
configs/experiments/: eaai-attacks.yaml  eaai-cross-architecture.yaml  eaai-primary.yaml
configs/paper/: eaai_expected.yaml
docs/: DATA.md  PAPER_MAP.md  PIPELINE.md
results/eaai-reported/asr-logs/: backdoor_1.txt  backdoor_10.txt  backdoor_5.txt  backdoor_baseline.txt
results/eaai-reported/primary/: baselines.csv  er_results.csv  per_experience.csv
scripts/: prepare_cicids2017.py  prepare_cicids2017_legacy.py  run_experiments.py
scripts/local/: 01_run_baselines.sh  02_run_er_ci_gpu0.sh  03_run_er_strat_cii_gpu1.sh  04_run_er_bal_cii_5090.sh  05_watch_and_launch_m10.sh  06_run_oracle.sh
src/strategies/: cl_strategies.py
src/training/: train.py
tests/: test_reproducibility_contract.py
tools/legacy/: RESULTS_REFERENCE_v2.md  export_results_csv.py  extract_er_metrics.py
tools/manuscript/: update_er_rows.py
