[project]
name = "ids-cl-benchmark"
version = "0.1.0"
description = "IDS Continual Learning baselines (MLP + CNN x Naive/Replay/EWC/LwF) on CIC-IDS-2017 Tue/Wed"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.4",
    "numpy>=1.26",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "tab-transformer-pytorch>=0.6.1",
    "pyyaml>=6.0.3",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
